Initialize Rust WebAssembly project structure and add core game logic. Include configuration files for Cargo, Webpack, and Vercel, along with initial HTML and CSS setup. Update .gitignore to exclude build artifacts.
Signed-off-by: Yunjie Dai <xdanger@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "name": "danmaku-game",
-  "builds": [
-    { "src": "**", "use": "@vercel/static" }
-  ],
+  "name": "danmaku-wasm",
+  "buildCommand": "wasm-pack build --target web && npx webpack --mode production",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
-} 
+}
